# capstone-project

./: .env  .gitignore  Election.csv  Government.csv  International.csv  PROJECT_SUPERVISOR_REPORT.md  People.csv  Politics.csv  Politics_sample_classified.csv  README.md  README_ollama_hate_classification.md  RESEARCH_PAPER_DIAGRAMS.md  Religion.csv  Sports.csv  alignment_formatting.py  classify_hate_ollama.py  data_collection.py  finetune_whisper_peft.py  fuzzy_loanword_detector.py  loanword_dict.py  normalization.py  ollama_fastapi_service.py  pipeline.py  requirements.txt  telugu politics.xlsx  transliteration.py  vllm_fastapi_service.py
agentic_hate_rag/: .env.example  .env.vllm.example  IMPLEMENTATION_PLAN.md  OLLAMA_FASTAPI_SERVICE.md  PROJECT_PLAN.md  README.md  VLLM_FASTAPI_SERVICE.md  pyproject.toml  requirements.txt
agentic_hate_rag/src/hate_rag_agents/: __init__.py  autoloop.py  classify.py  config.py  embed.py  embeddings.py  eval.py  graph.py  hitl.py  ingest.py  io_utils.py  labels.py  llm_clients.py  logging_utils.py  normalization.py  ollama_health.py  prompts.py  rag_store.py  reflection.py  syntax.py  vllm_health.py
experiments/: check_hf_dataset.ipynb  check_torch_install.ipynb  qwen_asr_handling.ipynb  whisper_finetuning_unsloth.ipynb
ignore/: data_collection.py  pipeline.py  requirements.txt  urls.csv
