[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hate-rag-agents"
version = "0.1.0"
description = "LangGraph and LangChain RAG workflow for code-mixed hate speech classification."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
